# gepisopendata

./: .env  .env-template  .gitignore  .taurignore  Cargo.toml  PROJECT_ANALYSIS.md  README.org  Tauri.toml_bk  package-lock.json  package.json  tail-log.ps1  tail-log.sh  tauri.conf.json
.github/workflows/: build-apps.yml  deploy.yml  pages-deploy.yml
angular-ui/: README.md  angular.json  npm-run-tauri:dev.sh  package-lock.json  package.json  tsconfig.json
angular-ui/data/: analyses-history.json  datasets-registry.json
angular-ui/public/: manifest.webmanifest
angular-ui/public/data/: analyses-history.json  datasets-registry.json
angular-ui/src/: index.html  main.ts  styles.css
angular-ui/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
angular-ui/src/app/components/layout/fixed-head/: fixed-head.css  fixed-head.html  fixed-head.spec.ts  fixed-head.ts
angular-ui/src/app/components/layout/fixed-search/: fixed-search.ts
angular-ui/src/app/components/layout/fixed-statusbar/: fixed-statusbar.css  fixed-statusbar.html  fixed-statusbar.spec.ts  fixed-statusbar.ts
angular-ui/src/app/components/views/view-base/: view-base.ts  (+2 more)
angular-ui/src/app/guards/: is-tauri.guard.ts
angular-ui/src/app/services/: config.service.ts  dataset-state.service.ts  environment.ts  search-in-page.service.ts  tauri-config.service.ts  web-config.service.ts
capabilities/: default.json
icons/: icon-generate.py  icon.icns
src/: main.rs
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data_processing.rs  main.rs
(+22 files in other folders)
