[package]
name = "gepis-dados-abertos"
version = "0.1.0"
edition = "2021"
build = "src-tauri/build.rs"

[[bin]]
name = "gepis-dados-abertos"
path = "src-tauri/src/main.rs"

[dependencies]
# Dependências do Tauri v2 (RC - Release Candidate)
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"

# Suas dependências originais
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
bollard = "0.19.4"
futures = "0.3"
serde_yaml = "0.9.34"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2.3"
tauri-plugin-mcp-gui = "0.1.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
